[tool.poetry]
name = "andebox"
version = "0.68"
description = "Ansible Developers Box"
authors = ["Alexei Znamensky <russoz@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/russoz-ansible/andebox"
repository = "https://github.com/russoz-ansible/andebox"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Framework :: Ansible",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Utilities"
]
keywords = [ "ansible", "tox", "vagrant" ]
packages = [
    { include = "andeboxlib" }
]

[tool.poetry.scripts]
andebox = "andeboxlib.cli:run"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/russoz-ansible/andebox/issues"
"Source Code" = "https://github.com/russoz-ansible/andebox"

[tool.poetry.dependencies]
python = "^3.11"
ansible-core = [
    { version = "^2.17.4", python = ">=3.12" },
    { version = "^2.15.0", python = ">=3.11,<3.12" },
]
pyyaml = ">=5.4"
python-vagrant = "^1.0.0"
fabric = "^3.1.0"
decorator = "^5.1.1"
looseversion = "^1.2.0"
tox = "^4.5.2"
virtualenv-pyenv = "*"
bump2version = "^1.0.1"
ruamel-yaml = "^0.18.6"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.3.1,<9.0.0"
pytest-mock = "^3.10.0"
pylint = ">=2.17.4,<4.0.0"
flake8 = ">=6,<8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
