[tool.poetry]
name = "andebox"
version = "1.10.0"
description = "Ansible Developers Box"
authors = ["Alexei Znamensky <russoz@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/russoz-ansible/andebox"
repository = "https://github.com/russoz-ansible/andebox"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Ansible",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Testing",
    "Topic :: Utilities"
]
keywords = [ "ansible", "tox", "vagrant" ]
packages = [
    { include = "andebox" }
]

[tool.poetry.scripts]
andebox = "andebox.cli:run"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/russoz-ansible/andebox/issues"
"Source Code" = "https://github.com/russoz-ansible/andebox"
"Documentation" = "https://andebox.readthedocs.io/en/latest/index.html"
"Changelog" = "https://github.com/russoz-ansible/andebox/blob/main/CHANGELOG.md"

[tool.poetry.dependencies]
python = "^3.11"
ansible-core = [
    { version = ">=2.18.0", python = ">=3.11" },
    { version = ">=2.19.0", python = ">=3.11" },
    { version = ">=2.20.0", python = ">=3.12" },
]
pyyaml = ">=5.4"
python-vagrant = ">=1.0.0"
fabric = ">=3.1.0"
tox = ">=4.5.2"
nox = ">=2024.0.0"
ruamel-yaml = ">=0.18.6,!=0.18.13,!=0.18.14"
typer = ">=0.12.0"
antsibull-docs = ">=2.16.3"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.3.1"
pytest-mock = ">=3.10.0"
gitpython = ">=3.1.44"
pre-commit = ">=4.2.0"
python-semantic-release = ">=9.21.1"
pytest-cov = ">=6.1.1"
junit-xml = ">=1.9"
pytest-skip-slow = ">=0.0.5"
sphinx = ">=8.2.3"
asciinwriter = ">=0.2.2"
ruff = ">=0.9.0"
poethepoet = ">=0.27.0"

[tool.poetry.group.docs.dependencies]
furo = ">=2024.8.6"
myst-parser = ">=4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variables = [
    "andebox/__init__.py:__version__",
]
version_toml = [
    "pyproject.toml:tool.poetry.version"
]
branch = "main"
changelog = { file = "CHANGELOG.md", mode = "init" }
build_command = "poetry build"
dist_path = "dist/"
upload_to_pypi = true
upload_to_release = true
commit_parser = "conventional"
major_on_zero = true
tag_format = "v{version}"
parse_version_from_tag = true
version_pattern = "v(?P<version>\\d+\\.\\d+\\.\\d+)"

[tool.semantic_release.publish]
upload_to_vcs_release = true

[tool.semantic_release.remote]
type = "github"
repository = "russoz-ansible/andebox"

[tool.poe.tasks]
test = "pytest -v --cov --cov-branch"
lint = "ruff check ."
fmt = "ruff format ."

[tool.poe.tasks.check]
sequence = [
  {cmd = "ruff check ."},
  {cmd = "ruff format --check ."},
]

[tool.poe.tasks.qa]
sequence = ["check", "test"]

[tool.poe.tasks.docs]
sequence = [
  {cmd = "rm -rf docs/_build"},
  {cmd = "sphinx-build -b html docs docs/_build/html"},
]

[tool.poe.tasks.deps]
sequence = [
  {cmd = "poetry update"},
  {cmd = "poetry lock"},
]

[tool.poe.tasks.release]
sequence = [
  {cmd = "semantic-release --verbose version"},
  {cmd = "semantic-release --verbose publish"},
]
